fix: fix styles on mobile

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -57,6 +57,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-width: 375px;
+	overflow-x: hidden;
 	background-color: $color-bg;
 	color: $color-main;
 	font-size: 16px;
