--- a/src/styles/components/_burger.scss
+++ b/src/styles/components/_burger.scss
@@ -14,6 +14,7 @@
 
 	span {
 		display: block;
+		width: 100%;
 		height: 1.5px;
 		background-color: $color-gray;
 		transition: all 0.3s ease;
